--- a/src/styles/RestyCss.css
+++ b/src/styles/RestyCss.css
@@ -9,6 +9,12 @@
     text-align: left;
 }
 /* CONTAINERS */
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
 .controls {
     width: 100vw;
     display: flex;
@@ -26,9 +32,14 @@
 /* BROAD SELECTORS */
 input[type=radio] {
     display: none;
+    padding: 1vh;
 }
-div + input[type=radio]:checked {
+input[type=radio]:checked + div {
     background: blue;
+    padding: 1vh;
+    color: white;
+    border-radius: 10%;
+    margin: 1vh;
 }
 
 /* SINGLE SELECTORS */
@@ -38,11 +49,16 @@ div + input[type=radio]:checked {
     padding-left: 2vw;
 }
 
+.selectorName {
+    padding: 1vh;
+    margin: 1vh;
+}
+
 .urlTextbox {
     width: 80vw;
 }
 
 .rawJsonTextbox {
     width: 80vw;
-    height: 40vh;
+    height: 15vh;
 }
